force-app/main/default/objects/DealerBrandHours__c/DealerBrandHours__c.object-meta.xml
<CustomObject>
    <description>This table defines the Dealer Brand Hours</description>
    <label>Dealer Brand Hours</label>
    <nameField>
        <displayFormat>DBRH{0000}</displayFormat>
        <label>Dealer Brand Hours Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dealer Brand Hours</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>