force-app/main/default/objects/DealerBrandHours__c/fields/Dealer__c.field-meta.xml
<CustomField>
    <fullName>Dealer__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Dealer the Brand&apos;s hours are associated with</inlineHelpText>
    <label>Dealer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Dealer&apos;s Brands Hours</relationshipLabel>
    <relationshipName>Dealer_Brand_Hours</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>