force-app/main/default/objects/DealerBrandHours__c/fields/Dealer_Brand__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Brand__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Dealer Brand record the hours are associated with</inlineHelpText>
    <label>Dealer Brand</label>
    <referenceTo>DealerBrands__c</referenceTo>
    <relationshipLabel>Dealer Brand Hours</relationshipLabel>
    <relationshipName>Dealer_Brand_Hours</relationshipName>
    <type>Lookup</type>
</CustomField>