force-app/main/default/objects/DealerBrandHours__c/fields/OpenTo__c.field-meta.xml
<CustomField>
    <fullName>OpenTo__c</fullName>
    <inlineHelpText>Closing time, in dealer timezone</inlineHelpText>
    <label>Open To</label>
    <length>20</length>
    <type>Text</type>
</CustomField>